--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_mobile.css">
     <!-- <link rel="stylesheet" href="style_pc.css" media="screen and (min-width: 480px)"> -->
+    <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
             </picture>
            
             <ul class="nav-rigth-section">
-                <li ><a href=""><b>Home</b></a></li>
-                <li><a href=""><b>Servicios</b></a></li>
-                <li><a href=""><b>Doctores</b></a></li>
-                <li></i><a href=""><b>Contacto</b></a></li>
+                <li><i class="fas fa-home"></i><a href=""><b>Home</b></a></li>
+                <li><i class="fas fa-hands-helping"></i><a href=""><b>Servicios</b></a></li>
+                <li><i class="fas fa-user-md"></i><a href=""><b>Doctores</b></a></li>
+                <li><i class="far fa-address-book"></i><a href=""><b>Contacto</b></a></li>
             </ul>
         </nav>
     </header>
@@ -32,6 +33,38 @@
                 <div></div>
              </div>
         </div>
+
+        <section class="boxes">
+            <div class="box1">
+                <a href="">
+                    <i class="fas fa-user-md"></i>
+                    <h2>Consultas</h2>
+                    <p>Coordina tu consulta medica con los mejores especialistas de la ciudad. conoce sus horarios de atención e información de contacto</p>
+                </a>
+            </div>
+            <div class="box2">
+                <a href="">
+                    <i class="fas fa-syringe"></i>
+                <h2>Ozonoterapia</h2>
+                <p>La ozonoterapia es la aplicación de ozono médico con fines terapéuticos para mejorar el funcionamiento de órganos y tejidos, tratando múltiples enfermedades. Conoce mas aquí</p>
+                </a>
+                </div>
+            <div class="box1">
+                <a href="">
+                    <i class="fas fa-spa"></i>
+                <h2>Estética</h2>
+                <p>Te ofrecemos múltiples tratamientos estéticos para ayudarte a conseguir los mejores resultado con las técnicas mas novedosas y los productos mas alta calidad</p>
+                </a>
+                </div>
+            <div class="box2">
+                <a href="">
+                    <i class="fas fa-stethoscope"></i>
+                <h2>Instrumental</h2>
+                <p>Tenemos a disposición de los pacientes una gran variedad de equipos médicos, implantes y prótesis para desarrollar sus intervenciones quirúrgicas sin contratiempos</p>
+                </a>
+                </div>
+            </section>
+
     </main>
 </body>
 </html>
