Nueva revision d pagina

--- a/index2.html
+++ b/index2.html
@@ -32,6 +32,14 @@
                 <div></div>
              </div>
         </div>
+
+        <section class="sections container">
+            <a href="">
+                <img src="./img/consulta.jpg" alt="">
+                
+            </a>
+
+        </section>
         
 
         <section class="boxes">
