agregado logo y mapa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav-container">
             <picture class="logo-header">
-                <a href=""><img src="./logo.jpg" alt="Logo de Medicardon"></a>
+                <a href=""><img src="./logo.png" alt="Logo de Medicardon"></a>
             </picture>
            
             <ul class="nav-rigth-section">
@@ -64,6 +64,11 @@
             
         </section>
 
+        <section class="map">
+            <h2>Ubicación</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3906.9937445703895!2d-70.20069638519081!3d11.694855191702327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e85edd51e9ed9cd%3A0xf8ce619bc9838283!2sMedicardon%20C.A.!5e0!3m2!1ses!2suy!4v1623903344333!5m2!1ses!2suy"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
         <!-- <section class="boxes">
             <div class="boxes_group_x2">
                 <div class="box1">
@@ -101,17 +106,18 @@
             <footer>
                 <div class="left_footer">
                     <ul>
-                        <li><i class="fab fa-whatsapp"></i> +58 414 000 0000 / +58 269 4161537</li>
+                        <li><i class="fab fa-whatsapp"></i> +58 412 680 0717 / +58 269 4161537</li>
                         <li><i class="far fa-envelope"></i> medicardonca@gmail.com</li>
                         <li><i class="far fa-clock"></i> Lunes a Viernes de 8:00am a 12:00pm<br>y 2:00pm a 6:00pm</li>
-                        <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara y Jofre Paul <br>
+                        <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara<br>y Jofre Paul, 
                         Edificio Medicardon C.A.</li>
                     </ul>
 
                 </div>
                 <div class="rigth_footer">
-                    <i class="fas fa-user-md"></i>
+                    <img src="./mini_logo.png" alt="">
                     <h3>Medicardon C.A.</h3>
+                    <p>RIF J-31728068-7</p>
                 </div>
             </footer>
     </main>
