agregado favicon y correcciones

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta mame="robots" content="index, follow"/>
     <link rel="stylesheet" href="style_mobile.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./mini_logo.png"/>
     <!-- <link rel="stylesheet" href="style_pc.css" media="screen and (min-width: 480px)"> -->
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Meicardon C.A.</title>
+    <meta name="description" content="Somos una clinica con multiples servicios en el corazón de la ciudad de Punto Fijo , Estado Falcón"/>
+    <title>Medicardon C.A.</title>
 </head>
 <body>
     <header>
