corregido logo tamaño

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </picture>
            
             <ul class="nav-rigth-section">
-                <li><i class="fas fa-home"></i><a href="./index.html">Home</a></li>
-                <li><i class="fas fa-hands-helping"></i><a href="">Servicios</a></li>
-                <li><i class="fas fa-user-md"></i><a href="">Doctores</a></li>
-                <li><i class="far fa-address-book"></i><a href="">Contacto</a></li>
+                <li><a href="./index.html"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href=""><i class="fas fa-hands-helping"></i>Servicios</a></li>
+                <li><a href=""><i class="fas fa-user-md"></i>Doctores</a></li>
+                <li><a href=""><i class="far fa-address-book"></i>Contacto</a></li>
             </ul>
         </nav>
     </header>
