agregada seccion de estetica

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h3>Ozonoterapia en columna</h3>
                     
                 </a>
-                <a href="">
+                <a href="./estetica.html">
                     <img src="./img/facial.jpg" alt="">
                     <h3>Estética</h3>
                 </a>
@@ -106,23 +106,24 @@
                 </div>
             </div>
             </section> -->
-            <footer>
-                <div class="left_footer">
-                    <ul>
-                        <li><i class="fab fa-whatsapp"></i> +58 412 680 0717 / +58 269 4161537</li>
-                        <li><i class="far fa-envelope"></i> medicardonca@gmail.com</li>
-                        <li><i class="far fa-clock"></i> Lunes a Viernes de 8:00am a 12:00pm<br>y 2:00pm a 6:00pm</li>
-                        <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara<br>y Jofre Paul, 
-                        Edificio Medicardon C.A.</li>
-                    </ul>
-
-                </div>
-                <div class="rigth_footer">
-                    <img src="./mini_logo.png" alt="">
-                    <h3>Medicardon C.A.</h3>
-                    <p>RIF J-31728068-7</p>
-                </div>
-            </footer>
+            
     </main>
+    <footer>
+        <div class="left_footer">
+            <ul>
+                <li><i class="fab fa-whatsapp"></i> +58 412 680 0717 / +58 269 4161537</li>
+                <li><i class="far fa-envelope"></i> medicardonca@gmail.com</li>
+                <li><i class="far fa-clock"></i> Lunes a Viernes de 8:00am a 12:00pm<br>y 2:00pm a 6:00pm</li>
+                <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara<br>y Jofre Paul, 
+                Edificio Medicardon C.A.</li>
+            </ul>
+
+        </div>
+        <div class="rigth_footer">
+            <img src="./mini_logo.png" alt="">
+            <h3>Medicardon C.A.</h3>
+            <p>RIF J-31728068-7</p>
+        </div>
+    </footer>
 </body>
 </html>
