--- a/traumatologia.html
+++ b/traumatologia.html
@@ -73,13 +73,23 @@
 
             <div class="implante-item"> 
                 <picture><img src="https://res.cloudinary.com/carlosshmc/image/upload/v1626708470/imagen-producto-servimed-153_iexbec.jpg" alt="Placas Anatómicas Bloqueadas Pequeños Fragmentos 3.5/4.0MM"></picture>
-                <h3>Placas Anatómicas Bloqueadas Pequeños Fragmentos 3.5/4.0MM</h3>
+                <h3>Caja de placas Anatómicas Bloqueadas Pequeños Fragmentos 3.5/4.0MM</h3>
+            </div>
+
+            <div class="implante-item">
+                <picture><img src="https://res.cloudinary.com/carlosshmc/image/upload/v1626714541/tornillo_canulado_otcxhx.jpg" alt="Caja de Instrumental para Tornillos Canulados Pequeños Fragmentos 4.0MM"></picture>
+                <h3>Caja de Instrumental para Tornillos Canulados Pequeños Fragmentos 4.0MM <br> de pequeños fragmentos</h3>
+            </div>
+
+            <div class="implante-item">
+                <picture><img src="https://res.cloudinary.com/carlosshmc/image/upload/v1626715106/grandes_fragmentos_lcp_jkjozm.jpg" alt="Caja de Instrumental para Grandes Fragmentos LCP 4.5 / 5.0 MM."></picture>
+                <h3>Caja de Instrumental para Grandes Fragmentos LCP 4.5 / 5.0 MM.</h3>
             </div>
 
              
             <div class="implante-item">
-                <picture><img src="https://res.cloudinary.com/carlosshmc/image/upload/v1626703278/402068fc-7325-4e3a-b0cf-76f75209bd4d_gx1uxz.jpg" alt=""></picture>
-                <h3>Sistema bloqueado de 3.5 mm para fracturas <br> de pequeños fragmentos</h3>
+                <picture><img src="https://res.cloudinary.com/carlosshmc/image/upload/v1626715940/pequenos_fragmentos_pv76xn.jpg" alt="Caja de Instrumental para Pequeños Fragmentos LCP 3.5MM"></picture>
+                <h3>Caja de Instrumental para Pequeños Fragmentos LCP 3.5MM</h3>
             </div>
         </section>
 
