--- a/estetica.html
+++ b/estetica.html
@@ -22,7 +22,7 @@
                 <li><a href="./index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href=""><i class="fas fa-hands-helping"></i>Servicios</a></li>
                 <li><a href=""><i class="fas fa-user-md"></i>Doctores</a></li>
-                <li><a href=""><i class="far fa-address-book"></i>Contacto</a></li>
+                <li><a href="./contacto.html"><i class="far fa-address-book"></i>Contacto</a></li>
             </ul>
         </nav>
     </header>
