--- a/neurocirugia.html
+++ b/neurocirugia.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="description" content="Somos una clinica con multiples servicios en el corazón de la ciudad de Punto Fijo , Estado Falcón"/>
-    <title>Implantes e instrumental</title>
+    <title>Neurocirugía: Implantes e instrumental</title>
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                 <li><a href="./index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href=""><i class="fas fa-hands-helping"></i>Servicios</a></li>
                 <li><a href=""><i class="fas fa-user-md"></i>Doctores</a></li>
-                <li><a href=""><i class="far fa-address-book"></i>Contacto</a></li>
+                <li><a href="./contacto.html"><i class="far fa-address-book"></i>Contacto</a></li>
             </ul>
         </nav>
     </header>
