agregado contactos y correcciones

--- a/estetica.html
+++ b/estetica.html
@@ -21,7 +21,7 @@
             <ul class="nav-rigth-section">
                 <li><a href="./index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href=""><i class="fas fa-hands-helping"></i>Servicios</a></li>
-                <li><a href=""><i class="fas fa-user-md"></i>Doctores</a></li>
+                <li><a href="./consultas.html"><i class="fas fa-user-md"></i>Doctores</a></li>
                 <li><a href="./contacto.html"><i class="far fa-address-book"></i>Contacto</a></li>
             </ul>
         </nav>
@@ -98,7 +98,14 @@
                     
                 </div>
             </div>
-
+        </section>
+    
+        <section class="contact-container">
+             <section class="conctact-item">
+                <ul>
+                    <a href="https://api.whatsapp.com/send?phone=584148104271"><li><i class="fab fa-whatsapp"></i>-- CONSULTAR / TOMAR CITA --</li></a>         
+                </ul>
+                </section>
         </section>
 
     </main>
