--- a/neurocirugia.html
+++ b/neurocirugia.html
@@ -24,7 +24,7 @@
             <ul class="nav-rigth-section">
                 <li><a href="./index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href=""><i class="fas fa-hands-helping"></i>Servicios</a></li>
-                <li><a href=""><i class="fas fa-user-md"></i>Doctores</a></li>
+                <li><a href="./consultas.html"><i class="fas fa-user-md"></i>Doctores</a></li>
                 <li><a href="./contacto.html"><i class="far fa-address-book"></i>Contacto</a></li>
             </ul>
         </nav>
