arreglos sugeridos y logo

--- a/consultas.html
+++ b/consultas.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav-container">
             <picture class="logo-header">
-                <a href=""><img src="./logo.png" alt="Logo de Medicardon"></a>
+                <a href="./index.html"><img src="./logo.png" alt="Logo de Medicardon"></a>
             </picture>
            
             <ul class="nav-rigth-section">
@@ -67,21 +67,26 @@
         
     </main>
     <footer>
-        <div class="left_footer">
-            <ul>
-                <li><i class="fab fa-whatsapp"></i> +58 412 680 0717 / +58 269 4161537</li>
-                <li><i class="far fa-envelope"></i> medicardonca@gmail.com</li>
-                <li><i class="far fa-clock"></i> Lunes a Viernes de 8:00am a 12:00pm<br>y 2:00pm a 6:00pm</li>
-                <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara<br>y Jofre Paul, 
+        <section class="footer_container">
+            <div class="left_footer">
+                <ul>
+                    <li><i class="fab fa-whatsapp"></i> +58 412 680 0717 / +58 269 4161537</li>
+                    <li><i class="far fa-envelope"></i> medicardonca@gmail.com</li>
+                    <li><i class="far fa-clock"></i> Lunes a Viernes de 8:00am a 12:00pm<br>y 2:00pm a 6:00pm</li>
+                    <li><i class="fas fa-map-marker-alt"></i>Callejon Comercio, entre Av. Jacinto Lara<br>y Jofre Paul, 
                     Edificio Medicardon C.A.</li>
-            </ul>
+                </ul>
 
-        </div>
-        <div class="rigth_footer">
-            <img src="./mini_logo.png" alt="">
-            <h3>Medicardon C.A.</h3>
-            <p>RIF J-31728068-7</p>
-        </div>
+            </div>
+            <div class="rigth_footer">
+                <img src="./mini_logo.png" alt="">
+                <h3>Medicardon C.A.</h3>
+                <p>RIF J-31728068-7</p>
+            </div>
+        </section>
+        <section class="infoDev_container">
+            <p>© 2021 Desarollada por Carlos Colmenares  +598 91490026</p>
+        </section>
     </footer>
 </body>
 </html>
